JWT Authentication - Step 2

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "super-secret-long-key-for-hmac_min_256_byte_long",
+    "Issuer": "Memory",
+    "Audience": "MemoryWasm"
+  }
 }
