Separate Auth logic to AuthServer project

--- a/AuthServer/appsettings.json
+++ b/AuthServer/appsettings.json
@@ -5,7 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*", 
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "IdentityServer_OpenIddict-secret-key-for-hmac_min_256_byte_long",
+    "Issuer": "Memory",
+    "Audience": "MemoryWasm"
+  },
   "Sites": {
     "Dev": "Server=barryonweb.com,1433;Database=Memory;User Id=SA;Password=Abc1234!;TrustServerCertificate=True;"
   }
